--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 id="profilePic">
             <h3 id="mainHeroText" style="margin-top: 3rem;">Hello, I'm Linus!</h3>
             <h5 style="margin-top: 5%;">Creator of Git and Linux</h5>
-            <h5 style="margin-bottom: 3em;">Portland, Oregon</h5>
+            <h5 style="margin-bottom: 3em; font-size: 1.1em; color: grey;">Portland, Oregon</h5>
             <button type="button"><a href="./pages/contact.html">Let's Talk</a></button>
         </div>
 
