--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,6 +12,11 @@
 </head>
 
 <body>
+    <section id="up"></section>
+    <section id="down"></section>
+    <section id="left"></section>
+    <section id="right"></section>
+
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgba(38, 28, 46, 0.742);">
             <a class="navbar-brand mx-3" href="../index.html">Linus Torvalds</a>
